--- a/html/git.html
+++ b/html/git.html
@@ -14,10 +14,11 @@
       <div class="card">
          <p class="subtitle">Git</p>
           <ul>
-            <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
-            <li>cd - расшифровывается как "Change directory", что переводится как "сменить папку" или "перейти в другую папку".</li>
-            <li>pwd - расшифровывается как "Present working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
-            <li>mkdir - расшифровывается как "Make directory", что переводится как "создать папку".</li>
+            <li>add - Добавляет файл или файлы в индекс, готовит их для коммита.</li>
+            <li>rm - используется для удаления файлов из из индекса и рабочей среды</li>
+            <li>commit - Формирует новый коммит с комментарием, описывающим суть внесённых правок.</li>
+            <li>branch - Управляет ветками в репозитории: создаёт новые ветки, а также просматривает, переименовывает и удаляет существующие. </li>
+            <li>push - Отправляет изменения из локального репозитория в удаленный.</li>
             <li>mv - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить и переименовать файл </li>
          </ul>
       </div>
