--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
          <p class="subtitle">Тестирование WEB-приложений</p>
          </p>
          <p class="location" align="center">
-            <a href="html/cmd(1).html">Командная строка Windows</a>
+            <a href="html/cmd.html">Командная строка Windows</a>
          </p>
          <p class="location" align="center">
-            <a href="html/mac(1).html">Терминал MacOS</a>
+            <a href="html/mac.html">Терминал MacOS</a>
          </p>
           <p class="location" align="center">
-            <a href="html/git(1).html">Git</a>
+            <a href="html/git.html">Git</a>
          </p>
          <p> <br>
          </p>
